# vcoregdext

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  main.cpp
.github/workflows/: cmake-multi-platform.yml
docs/: CGodotFileStream.md  CGodotIOHandler.md  Doxyfile  Examples.md  README.MD  VCoreGDExt__VLoader.md  VCoreGDExt__VMaterial.md  VCoreGDExt__VMesher.md  VCoreGDExt__VModel.md  VCoreGDExt__VSceneNode.md  VLoader.md  VMaterial.md  VMesher.md  VModel.md  VSceneNode.md  markdown.py
include/: Convert.hpp  GodotFileStream.hpp  GodotSurface.hpp  VExporter.hpp  VLoader.hpp  VMaterial.hpp  VMesher.hpp  VModel.hpp  VPackedScene.hpp  VSceneNode.hpp  VoxelMaterial.hpp  VoxelModel.hpp  VoxelStorage.hpp
include/Helper/: Convert.hpp  Resource.hpp  StaticType.hpp
include/VCore/: VConfig.hpp
src/: GodotFileStream.cpp  VExporter.cpp  VLoader.cpp  VMaterial.cpp  VMesher.cpp  VModel.cpp  VPackedScene.cpp  VoxelModel.cpp  VoxelStorage.cpp
